@@ -35,3 +35,9 @@ Feature: Text Area
   Scenario: Finding a text area dynamically
     When I find a text area while the script is executing
     Then I should be able to type "I found it" into the area element
+    
+  Scenario: Clearing the text area
+    When I type "abcdefghijklmnop" into the text area
+    Then the text area should contain "abcdefghijklmnop"
+    When I clear the text area
+    Then the text area should contain ""
